--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -285,6 +285,7 @@
     <module>org.openhab.binding.somfytahoma</module>
     <module>org.openhab.binding.sonos</module>
     <module>org.openhab.binding.sonyaudio</module>
+    <module>org.openhab.binding.sonybravia</module>
     <module>org.openhab.binding.sonyprojector</module>
     <module>org.openhab.binding.spotify</module>
     <module>org.openhab.binding.squeezebox</module>
